# CLRInstrumentationEngine

./: build.ps1
src/: CMakeLists.txt  build.sh
src/Common.Lib/: tstring.h
src/InstrumentationEngine/: AppDomainCollection.cpp  AppDomainInfo.cpp  AssemblyInfo.cpp  CMakeLists.txt  CorMethodMalloc.cpp  CorProfilerFunctionControlWrapper.cpp  CorProfilerInfoWrapper.cpp  ExceptionClause.cpp  ExceptionSection.cpp  Instruction.cpp  InstructionFactory.cpp  InstructionGraph.cpp  InstructionGraph.h  LocalVariableCollection.cpp  LoggingWrapper.h  MethodInfo.cpp  MethodJitInfo.cpp  ModuleInfo.cpp  ProfilerManager.cpp  SingleRetDefaultInstrumentation.cpp  TypeCreator.cpp  stdafx.h
src/InstrumentationEngine.Api/: InstrumentationEngine.h  InstrumentationEngine.idl  InstrumentationEngine_api.cpp
src/InstrumentationEngine.Lib/: ConfigurationLoader.cpp  ConfigurationLocator.cpp  InstrumentationMethod.cpp  Logging.cpp  RawProfilerHookLoader.cpp  RawProfilerHookSettingsReader.cpp  SignatureValidator.cpp  XmlDocWrapper.cpp
src/unix/dependencies/: nuget.config
src/unix/inc/: palrt2.h
